almost ready to deploy

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Olio Tenerelli - Olio Extravergine d'Oliva Pugliese 100% BIO. Scopri i nostri formati disponibili, contattaci per info e ordini">
     <title>Olio Tenerelli - EVO Pugliese 100% Bio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -38,6 +39,7 @@
             <div class="subtitle"></div>
             <h1>Olio Tenerelli</h1>
             <p>Extravergine d'Oliva Pugliese 100% BIO</p>
+            <h3>Da 30 anni sulle tavole locali</h3>
             <a href="#prodotti" class="btn-hero">Scopri i Formati</a>
         </div>
     </section>
@@ -102,10 +104,10 @@
                     </div>
                     <div class="product-body">
                         <span class="product-format">Lattina</span>
-                        <h3>Formato 2,5 Litri</h3>
+                        <h3>Formato 3 Litri</h3>
                         <p>Lattina alimentare che garantisce la perfetta conservazione dell'olio. Formato pratico per famiglie.</p>
                         <div class="product-specs">
-                            <div class="product-capacity">2,5L</div>
+                            <div class="product-capacity">3L</div>
                             <div class="product-price">€ 0.00</div>
                             <div class="product-price">Su richiesta</div>
                         </div>
@@ -147,16 +149,11 @@
                 </p>
                 
                 <div class="contact-methods">
-                    <div class="contact-method" data-aos="fade-up" data-aos-delay="100">
-                        <i class="fas fa-phone-alt"></i>
-                        <h4>Telefono</h4>
-                        <a href="">+39 123 456 7890 <!-- Placeholder --></a>
-                        <p style="margin-top: 10px; font-size: 0.9rem;">Chiamaci quando vuoi!</p>
-                    </div>
+
                     <div class="contact-method" data-aos="fade-up" data-aos-delay="200">
                         <i class="fas fa-envelope"></i>
                         <h4>Email</h4>
-                        <a href="">placeholder@mail.com <!-- Placeholder --></a>
+                        <a href="mailto:oliotenerelli@gmail.com">oliotenerelli@gmail.com</a>
                         <p style="margin-top: 10px; font-size: 0.9rem;">Risposta garantita entro 24h</p>
                     </div>
                 </div>
@@ -230,16 +227,15 @@
                 <div class="footer-section">
                     <h4>Contatti</h4>
                     <p>
-                        Via placeholder 123 <!-- Placeholder --><br>
+                        Via Francesco Petrarca 6<br>
                         70020 Bitritto (BA)<br>
-                        Tel: +39 123 456 7890 <!-- Placeholder --><br>
-                        Email: placeholder@mail.com <!-- Placeholder -->
+                        Email: oliotenerelli@gmail.com
                     </p>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Giuseppe Tenerelli - tutti i diritti sono riservati</p>
-                <p>P.IVA 12345678901 <!-- Placeholder --> • Made with <i class="fas fa-heart" style="color: var(--dorato);"></i> in Puglia</p>
+                <p>P.IVA 05235780722 • Made with <i class="fas fa-heart" style="color: var(--dorato);"></i> in Puglia</p>
             </div>
         </div>
     </footer>
