--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Olio Tenerelli - Olio Extravergine d'Oliva Pugliese 100% BIO. Scopri i nostri formati disponibili, contattaci per info e ordini">
+    <meta name="description" content="Olio Tenerelli - Extravergine d'Oliva Pugliese 100% BIO. Scopri i nostri formati disponibili, contattaci per info e ordini">
     <title>Olio Tenerelli - EVO Pugliese 100% Bio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -37,8 +37,8 @@
     <section id="home" class="hero">
         <div class="hero-content" data-aos="fade-up" data-aos-duration="1000">
             <div class="subtitle"></div>
-            <h1>Olio Tenerelli</h1>
-            <p>Extravergine d'Oliva Pugliese 100% BIO</p>
+            <strong><h1>Olio Tenerelli</h1></strong>
+            <strong><p>Extravergine d'Oliva Pugliese 100% BIO</p></strong>
             <h3>Da 30 anni sulle tavole locali</h3>
             <a href="#prodotti" class="btn-hero">Scopri i Formati</a>
         </div>
