ready to deploy

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="static/CSS/assets/IMGS/logo 1.png" alt="" height="50" class="d-inline-block">
+                <img id="logo" src="static/CSS/assets/IMGS/logo 1.png" alt="" height="50" class="d-inline-block">
                 Tenerelli
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -39,7 +39,7 @@
             <div class="subtitle"></div>
             <strong><h1>Olio Tenerelli</h1></strong>
             <strong><p>Extravergine d'Oliva Pugliese 100% BIO</p></strong>
-            <h3>Da 30 anni sulle tavole locali</h3>
+            <i><h3>Da 30 anni sulle tavole locali</h3></i>
             <a href="#prodotti" class="btn-hero">Scopri i Formati</a>
         </div>
     </section>
@@ -84,7 +84,7 @@
             <div class="product-grid">
                 <div class="product-card" data-aos="fade-up" data-aos-delay="100">
                     <div class="product-image">
-                        <!-- Placeholder for product image -->
+                        <img src="static/CSS/assets/IMGS/1l.jpeg" alt="1L">
                     </div>
                     <div class="product-body">
                         <span class="product-format">Bottiglia Vetro</span>
@@ -92,7 +92,7 @@
                         <p>Ideale per uso quotidiano e regalo.</p>
                         <div class="product-specs">
                             <div class="product-capacity">1L</div>
-                            <div class="product-price">€ 0.00</div>
+                            <div class="product-price">€ 10.00</div>
                             <div class="product-price">Su richiesta</div>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
 
                 <div class="product-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="product-image">
-                        <!-- Placeholder for product image -->
+                        <img src="static/CSS/assets/IMGS/3l.jpeg" alt="3L">
                     </div>
                     <div class="product-body">
                         <span class="product-format">Lattina</span>
@@ -108,7 +108,7 @@
                         <p>Lattina alimentare che garantisce la perfetta conservazione dell'olio. Formato pratico per famiglie.</p>
                         <div class="product-specs">
                             <div class="product-capacity">3L</div>
-                            <div class="product-price">€ 0.00</div>
+                            <div class="product-price">€ 30.00</div>
                             <div class="product-price">Su richiesta</div>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
 
                 <div class="product-card" data-aos="fade-up" data-aos-delay="300">
                     <div class="product-image">
-                        <!-- Placeholder for product image -->
+                        <img src="static/CSS/assets/IMGS/5l.jpeg" alt="5L">
                     </div>
                     <div class="product-body">
                         <span class="product-format">Lattina</span>
@@ -124,7 +124,7 @@
                         <p>Perfetto per la ristorazione e per chi desidera una scorta duratura.</p>
                         <div class="product-specs">
                             <div class="product-capacity">5L</div>
-                            <div class="product-price">€ 0.00</div>
+                            <div class="product-price">€ 50.00</div>
                             <div class="product-price">Su richiesta</div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                 
                 <div class="timeline-item" data-aos="fade-right">
                     <div class="timeline-content">
-                        <h4>Fondamenda dell'azienda</h4>
+                        <h4>Fondazione dell'azienda</h4>
                         <p>Acquisto dei primi terreni e avvio dei primi raccolti, portando i primi sorrisi nelle tavole dei nostri clienti</p>
                     </div>
                     <div class="timeline-year">2004</div>
@@ -199,7 +199,7 @@
                 
                 <div class="timeline-item" data-aos="fade-left">
                     <div class="timeline-content">
-                        <h4>Ingradimento dell'attività</h4>
+                        <h4>Ingrandimento dell'attività</h4>
                         <p>Traguardo importante: dove grazie a tanta passione e tanto duro lavoro, siamo in grado di poter soddisfare più palati a tavola</p>
                     </div>
                     <div class="timeline-year">2020</div>
