--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         </div>
                         <div class="delivery-item">
                             <i class="fas fa-store"></i>
-                            <h5>Ritiro in Sede</h5>
+                            <h5>Ritiro in <b><a style="color: var(--dorato); text-decoration: none;" href="https://www.google.it/maps/place//data=!4m2!3m1!1s0x1347ebc095cf2e4b:0x75ca9d726e0cf692?sa=X&ved=1t:8290&ictx=111">Sede</a></b></h5>
                             <p>Vieni a trovarci, e ritira direttamente il tuo ordine</p>
                         </div>
                     </div>
@@ -227,9 +227,9 @@
                 <div class="footer-section">
                     <h4>Contatti</h4>
                     <p>
-                        Via Francesco Petrarca 6<br>
+                        <b><a style="color: var(--dorato); text-decoration: none;" href="https://www.google.it/maps/place//data=!4m2!3m1!1s0x1347ebc095cf2e4b:0x75ca9d726e0cf692?sa=X&ved=1t:8290&ictx=111">Via Francesco Petrarca 6<br></a></b>
                         70020 Bitritto (BA)<br>
-                        Email: oliotenerelli@gmail.com
+                        Email: <a style="color: var(--dorato); text-decoration: none;" href="mailto:oliotenerelli@gmail.com">oliotenerelli@gmail.com</a>
                     </p>
                 </div>
             </div>
