--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Giuseppe Tenerelli - tutti i diritti sono riservati</p>
-                <p>P.IVA 05235780722 • Made with <i class="fas fa-heart" style="color: var(--dorato);"></i> in Puglia</p>
+                <p>P.IVA 05235780722 • Made with <i class="fas fa-heart" style="color: var(--dorato);"></i> by <a style="color: var(--dorato); text-decoration: none;" href="https://franksitez.com" target="_blank"><b>FrankSitez</b></a></p>
             </div>
         </div>
     </footer>
