--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Olio Tenerelli - Extravergine d'Oliva Pugliese 100% BIO. Scopri i nostri formati disponibili, contattaci per info e ordini">
+    <meta name="description" content="Olio Tenerelli - Extravergine d'Oliva Pugliese 100% BIO. Da 30 anni sulle tavole locali">
+
+    <meta property="og:image" content="static/CSS/assets/IMGS/logo 1.png">
+    <meta property="og:title" content="Olio Tenerelli - EVO Pugliese 100% Bio">
+    <meta property="og:description" content="Olio Tenerelli - Extravergine d'Oliva Pugliese 100% BIO. Da 30 anni sulle tavole locali. Scegli il formato più adatto alle tue esigenze. Contattaci per ordini e informazioni.">
+
     <title>Olio Tenerelli - EVO Pugliese 100% Bio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
