Formats imgs upgrade

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="product-grid">
                 <div class="product-card" data-aos="fade-up" data-aos-delay="100">
                     <div class="product-image">
-                        <img src="static/CSS/assets/IMGS/1l.jpeg" alt="1L">
+                        <img src="static/CSS/assets/IMGS/1l.png" alt="1L">
                     </div>
                     <div class="product-body">
                         <span class="product-format">Bottiglia Vetro</span>
@@ -105,7 +105,7 @@
 
                 <div class="product-card" data-aos="fade-up" data-aos-delay="200">
                     <div class="product-image">
-                        <img src="static/CSS/assets/IMGS/3l.jpeg" alt="3L">
+                        <img src="static/CSS/assets/IMGS/3l.png" alt="3L">
                     </div>
                     <div class="product-body">
                         <span class="product-format">Lattina</span>
@@ -121,7 +121,7 @@
 
                 <div class="product-card" data-aos="fade-up" data-aos-delay="300">
                     <div class="product-image">
-                        <img src="static/CSS/assets/IMGS/5l.jpeg" alt="5L">
+                        <img src="static/CSS/assets/IMGS/5l.png" alt="5L">
                     </div>
                     <div class="product-body">
                         <span class="product-format">Lattina</span>
