--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="container">
             <div class="section-title" data-aos="fade-up">
                 <h2>La Nostra Storia</h2>
-                <p>Di generazione in generazione, uniti dall'amore per la nostra terra'</p>
+                <p>Di generazione in generazione, uniti dall'amore per la nostra terra</p>
             </div>
             
             <div class="timeline-container">
