--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li class="nav-item"><a class="nav-link" href="#prodotti">Prodotti</a></li>
                     <li class="nav-item"><a class="nav-link" href="#acquisti">Acquisti</a></li>
                     <li class="nav-item"><a class="nav-link" href="#storia">Storia</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#recensioni">Recensioni</a></li>
                 </ul>
             </div>
         </div>
@@ -217,6 +218,29 @@
                     </div>
                     <div class="timeline-year">2025</div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Recensioni Section -->
+    <section id="recensioni">
+        <div class="container">
+            <div class="recensioni-content" data-aos="fade-up">
+                <h2>Il prodotto è stato di tuo gradimento?</h2>
+                <p>La tua opinione è importante per noi.<br>Condividi la tua esperienza lasciando una recensione.</p>
+                
+                <div class="recensioni-action" data-aos="zoom-in" data-aos-delay="200">
+                    <a href="https://g.page/r/CZL2DG5yncp1EBM/review" target="_blank" class="btn-recensione">
+                        <i class="fas fa-star"></i>
+                        Lascia una Recensione
+                    </a>
+                    <div class="qr-code-container">
+                        <img src="static/CSS/assets/IMGS/QrReviews.png" alt="QR Code Recensioni Google">
+                        <p class="qr-label">Scansiona per recensire</p>
+                    </div>
+                </div>
+                
+                <p class="recensioni-note">Ci vogliono solo pochi secondi per aiutarci a crescere!</p>
             </div>
         </div>
     </section>
